# srvr/src/main/java/malka/plus/controller/UserController.java
@@ -1,0 +1,13 @@
+package malka.plus.controller;
+
+import org.springframework.stereotype.Controller;
+
+@Controller
+public class UserController 
+{
+
+	public void addUser(String authTokenId) 
+	{
+	}
+
+}
