# srvr/src/main/java/malka/plus/restcontroller/CommentRestController.java
@@ -1,5 +1,7 @@
 package malka.plus.restcontroller;
 
+import java.io.IOException;
+import java.security.GeneralSecurityException;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -8,6 +10,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RestController;
 
 import malka.plus.controller.CommentController;
@@ -35,8 +38,8 @@ public class CommentRestController
 	
 	@CrossOrigin
 	@PostMapping("/comments")
-	public Comment addComment(@RequestBody Comment comment)
+	public Comment addComment(@RequestBody Comment comment, @RequestHeader("authTokenId") String authTokenId) throws GeneralSecurityException, IOException
 	{
-		return commentController.addComment(comment);
+		return commentController.addComment(comment, authTokenId);
 	}
 }
